process recrutement + annuel final w (e.C)

--- a/src/app/Admin/Collaborateur/add-compte-collab/add-compte-collab.component.html
+++ b/src/app/Admin/Collaborateur/add-compte-collab/add-compte-collab.component.html
@@ -40,7 +40,9 @@
     <h4 class="card-title"> Collaborateur</h4>
     <hr>
     <form [formGroup]="managerServiceForm" (ngSubmit)="onSubmit()">
-    
+      <div *ngIf="errorMessage" class="alert alert-danger">
+        {{ errorMessage }}
+      </div>
       
       
       <div *ngIf="currentStep === 1">
