--- a/src/app/Collaborateur/Annuel/get-bilan-by-id-collab/get-bilan-by-id-collab.component.html
+++ b/src/app/Collaborateur/Annuel/get-bilan-by-id-collab/get-bilan-by-id-collab.component.html
@@ -43,7 +43,7 @@ crossorigin="anonymous"
         </div>
 
         <p class="form-control" id="objectifAtteints" name="objectifAtteints">
-            {{ bilanAnnuel.objectifAtteints }}
+            {{ bilanAnnuel.bilanAnnuel.objectifAtteints }}
         </p>
       </div>
     </div>
@@ -82,7 +82,7 @@ crossorigin="anonymous"
       </div>
 
         <p>
-            {{ bilanAnnuel.objectifsFuturs }}
+            {{ bilanAnnuel.bilanAnnuel.objectifsFuturs }}
         </p>
       </div>
     </div>
@@ -120,7 +120,7 @@ crossorigin="anonymous"
       </div>
 
         <p>
-            {{ bilanAnnuel.projetsAccomplis }}
+            {{ bilanAnnuel.bilanAnnuel.projetsAccomplis }}
         </p>
       </div>
     </div>
@@ -158,7 +158,7 @@ crossorigin="anonymous"
         </div>
 
         <p>
-            {{ bilanAnnuel.challenges }}
+            {{ bilanAnnuel.bilanAnnuel.challenges }}
         </p>
       </div>
     </div>
