--- a/src/app/Collaborateur/Annuel/mes-entretiens-annuel-collab/mes-entretiens-annuel-collab.component.html
+++ b/src/app/Collaborateur/Annuel/mes-entretiens-annuel-collab/mes-entretiens-annuel-collab.component.html
@@ -26,6 +26,8 @@
   
             <button
               class="btn btn-inverse-primary"
+              [disabled]="!canJoinInterview(entretien.entretien.dateEntretien, entretien.entretien.heureDebut)"
+
               (click)="
                 joinInterview(
                   entretien.entretien.roomId,
@@ -34,6 +36,8 @@
             >
               Rejoindre l'interview
             </button>
+            <p style="color: red;"> NB : Vous ne pouvez pas rejoindre l'entretien avant la date et l heure indiquée</p>
+
           </div>
         </div>
       </div>
