--- a/src/app/Collaborateur/Annuel/update-bilan/update-bilan.component.html
+++ b/src/app/Collaborateur/Annuel/update-bilan/update-bilan.component.html
@@ -169,7 +169,7 @@
   </div>
   <br>
 <button (click)="mettreAJourBilanAnnuel()" class="btn btn-success">Mettre à jour le bilan annuel</button>
-
+&nbsp;&nbsp;
 <button (click)="mettreAJouretEnvoyeBilanAnnuel()" class="btn btn-warning">Mettre à jour et envoyer le bilan annuel</button>
 
 </form>
