--- a/src/app/Manager/display-mes-postes/PostApprouvedId/post-approuved-id/post-approuved-id.component.html
+++ b/src/app/Manager/display-mes-postes/PostApprouvedId/post-approuved-id/post-approuved-id.component.html
@@ -11,15 +11,9 @@
           Ajouter Un Test Technique
         </button>
       </div>
-      <button
-      class="btn btn-inverse-warning"
-      (click)="publierPoste(poste.id)"
-    >
-      Publier
-    </button>
-    
-    
-    
+      <button class="btn btn-inverse-warning" (click)="publierPoste(poste.id)">
+        Publier
+      </button>
     </div>
   </div>
 </div>
@@ -155,7 +149,7 @@
                 </ul>
               </div>
               <ng-template #noQuizzes>
-                <p>No quizzes found for this post.</p>
+                <p>Aucun test technique trouvé.</p>
               </ng-template>
             </div>
           </div>
