--- a/src/app/menu/admin-menu/admin-menu.component.html
+++ b/src/app/menu/admin-menu/admin-menu.component.html
@@ -226,7 +226,7 @@
         >
           <a class="nav-link" [routerLink]="['/managerRh/dashboard']">
             <i class="mdi mdi-home menu-icon"></i>
-            <span class="menu-title">Dashboard</span>
+            <span class="menu-title">Acceuil</span>
           </a>
         </li>
         <li
