--- a/src/app/Collaborateur/poste/mestesttechnique/mestesttechnique.component.html
+++ b/src/app/Collaborateur/poste/mestesttechnique/mestesttechnique.component.html
@@ -1,3 +1,8 @@
+<h2
+  style="font-size: 24px; font-weight: bold; color: #333; margin-bottom: 20px"
+>
+  Mes Tests Technique
+</h2>
 <div *ngIf="tests && tests.length > 0; else noTests">
   <div class="row">
     <div>
