--- a/src/app/Manager/quizQuestions/add-question/add-question.component.html
+++ b/src/app/Manager/quizQuestions/add-question/add-question.component.html
@@ -1,101 +1,111 @@
-<div class="container">
+<div>
   <div class="row justify-content-center">
-    <div>
-      <h3 class="text-center mb-4">Ajouter une question</h3>
-      <form (ngSubmit)="addQuestionToQuiz()" #questionForm="ngForm">
-        <div class="form-group">
-          <label for="content">Contenu de la question :</label>
-          <textarea
-            id="content"
-            name="content"
-            class="form-control"
-            [(ngModel)]="question.content"
-            required
-          ></textarea>
-        </div>
-
-        <div class="form-group">
-          <div class="row">
-            <div class="col-md-6">
-              <label for="option1">Option 1 :</label>
-              <input
-                type="text"
-                id="option1"
-                name="option1"
-                class="form-control"
-                [(ngModel)]="question.option1"
-                required
-              />
-            </div>
-            <div class="col-md-6">
-              <label for="option2">Option 2 :</label>
-              <input
-                type="text"
-                id="option2"
-                name="option2"
-                class="form-control"
-                [(ngModel)]="question.option2"
-                required
-              />
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="row">
-            <div class="col-md-6">
-              <label for="option3">Option 3 :</label>
-              <input
-                type="text"
-                id="option3"
-                name="option3"
-                class="form-control"
-                [(ngModel)]="question.option3"
-                required
-              />
-            </div>
-            <div class="col-md-6">
-              <label for="option4">Option 4 :</label>
-              <input
-                type="text"
-                id="option4"
-                name="option4"
-                class="form-control"
-                [(ngModel)]="question.option4"
-                required
-              />
-            </div>
-          </div>
-        </div>
-      
-
-        <div class="form-group">
-          <label for="answer">Réponse :</label>
-          <select
-            id="answer"
-            name="answer"
-            class="form-control"
-            [(ngModel)]="question.answer"
-            required
+    <div class="">
+      <div class="card">
+        <div class="card-header">
+          <h3 
+            class="text-center mb-0"
+            
           >
-            <option *ngIf="question.option1" [value]="question.option1">
-              {{ question.option1 }}
-            </option>
-            <option *ngIf="question.option2" [value]="question.option2">
-              {{ question.option2 }}
-            </option>
-            <option *ngIf="question.option3" [value]="question.option3">
-              {{ question.option3 }}
-            </option>
-            <option *ngIf="question.option4" [value]="question.option4">
-              {{ question.option4 }}
-            </option>
-          </select>
+            Ajouter une question
+          </h3>
         </div>
+        <div class="card-body">
+          <form (ngSubmit)="addQuestionToQuiz()" #questionForm="ngForm">
+            <div class="form-group">
+              <label for="content">Contenu de la question :</label>
+              <textarea
+                id="content"
+                name="content"
+                class="form-control"
+                [(ngModel)]="question.content"
+                required
+              ></textarea>
+            </div>
 
-        <button type="submit" class="btn btn-primary btn-block">
-          Ajouter la question
-        </button>
-      </form>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-md-6">
+                  <label for="option1">Option 1 :</label>
+                  <input
+                    type="text"
+                    id="option1"
+                    name="option1"
+                    class="form-control"
+                    [(ngModel)]="question.option1"
+                    required
+                  />
+                </div>
+                <div class="col-md-6">
+                  <label for="option2">Option 2 :</label>
+                  <input
+                    type="text"
+                    id="option2"
+                    name="option2"
+                    class="form-control"
+                    [(ngModel)]="question.option2"
+                    required
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-md-6">
+                  <label for="option3">Option 3 :</label>
+                  <input
+                    type="text"
+                    id="option3"
+                    name="option3"
+                    class="form-control"
+                    [(ngModel)]="question.option3"
+                    required
+                  />
+                </div>
+                <div class="col-md-6">
+                  <label for="option4">Option 4 :</label>
+                  <input
+                    type="text"
+                    id="option4"
+                    name="option4"
+                    class="form-control"
+                    [(ngModel)]="question.option4"
+                    required
+                  />
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="answer">Réponse :</label>
+              <select
+                id="answer"
+                name="answer"
+                class="form-control"
+                [(ngModel)]="question.answer"
+                required
+              >
+                <option *ngIf="question.option1" [value]="question.option1">
+                  {{ question.option1 }}
+                </option>
+                <option *ngIf="question.option2" [value]="question.option2">
+                  {{ question.option2 }}
+                </option>
+                <option *ngIf="question.option3" [value]="question.option3">
+                  {{ question.option3 }}
+                </option>
+                <option *ngIf="question.option4" [value]="question.option4">
+                  {{ question.option4 }}
+                </option>
+              </select>
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-block">
+              Ajouter la question
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
